# Jaehong-Cheon

./: README.md
Likelion-13/: pyproject.toml
Likelion-13/accounts/: serializers.py  views.py
Likelion-13/accounts/migrations/: 0001_initial.py
Likelion-13/category/: models.py  urls.py  views.py
Likelion-13/category/migrations/: 0001_initial.py  0002_alter_category_name.py
Likelion-13/comment/: models.py  serializers.py  urls.py  views.py
Likelion-13/comment/migrations/: 0001_initial.py  0002_comment_categories.py  0003_remove_comment_categories.py  0004_alter_comment_author_name.py
Likelion-13/config/: permissions.py  settings.py  urls.py
Likelion-13/posts/: admin.py  logging_middleware.py  models.py  urls.py  views.py
Likelion-13/posts/migrations/: 0001_initial.py  0002_alter_post_status.py  0003_post_category.py  0004_remove_post_category.py  0005_post_categories.py  0006_remove_post_categories_postcategory.py
Likelion-13/week3_Django_prac/: secrets.json
Likelion-13/week3_Django_prac/config/: settings.py
Likelion-13/week3_Django_prac/posts/: views.py
